Added header bg-color and logo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Home</title>
 </head>
 <body>
     <!-- Header Sections -->
     <header>
+        <div class="header-logo">
+            <h1 class="upeeks-logo-text">UPeeks</h1>
+        </div>
         <!-- Nav Menu -->
-        <nav></nav>
+        <nav>
+
+        </nav>
     </header>
 
     <!-- Footer Section -->
