--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
     <!-- Header Sections -->
     <header>
         <div class="header-logo">
-            <h1 class="upeeks-logo-text">UPeeks</h1>
+            <a href="index.html"><h1 class="upeeks-logo-text"> UPeeks</h1></a>
         </div>
         <!-- Nav Menu -->
         <nav>
