--- a/index.html
+++ b/index.html
@@ -23,7 +23,23 @@
 
     <!-- Footer Section -->
     <footer>
-        
+        <div class="upLogo">
+            <img src="img/upl.png" alt="University of the Philippines">
+        </div>
+    <div class="footer-content">
+        <h3>UPeeks</h3>
+        <p>The University of the Philippines is known for its quality education
+            and also for its mesmerizing sceneries. It embraces everyone to enjoy 
+            the knowledge and freedom in fulfilling one goal.
+        </p>
+        <ul class="socials">
+           <li><a href="https://www.facebook.com/carl.suel  llo/"><i class= "fa-brands fa-instagram"></i></a></li>
+           <li><a href="https://www.twitch.tv/"><i class= "fa-brands fa-twitter"></i></a> </li>    
+        </ul>
+        </div>
+    <div class="footer-bottom">
+        <p>Copyright &copy; 2023</p>
+    </div>
     </footer>
 </body>
 </html>
