Fixed footer logo

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <!-- Footer Section -->
     <footer>
         <div class="upLogo">
-            <img src="img/upl.png" alt="University of the Philippines">
+            <img src="img/UPeeks Logo.png" alt="University of the Philippines">
         </div>
         <div class="footer-content">
-            <h3>UPeeks</h3>
+            <h3 class="upeeks-footer">UPeeks</h3>
             <p>
                 The University of the Philippines is known for its quality education
                 and also for its mesmerizing sceneries. It embraces everyone to enjoy 
