Added facebook icon for footer

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 the knowledge and freedom in fulfilling one goal.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/carl.suel  llo/"><i class= "fa-brands fa-instagram"></i></a></li>
-                <li><a href="https://www.twitch.tv/"><i class= "fa-brands fa-twitter"></i></a> </li>    
+                <li><a href="https://www.facebook.com/carl.suelllo/"><i class= "fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a> </li>
+                <li><a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a> </li>    
             </ul>
         </div>
         <div class="footer-bottom">
