added html files for the gallery

--- a/src/contact.html
+++ b/src/contact.html
@@ -25,7 +25,7 @@
     <!-- Footer Section -->
     <footer>
         <div class="upLogo">
-            <img src="/img/UPeeks Logo.png" alt="University of the Philippines">
+            <img src="img/UPeeks Logo.png" alt="University of the Philippines">
         </div>
         <div class="footer-content">
             <h3 class="upeeks-footer">UPeeks</h3>
