New Template Done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
@@ -14,18 +14,24 @@
     <!-- Header Sections -->
     <header>
         <div class="header-logo">
-            <a href="index.html"><h1 class="upeeks-logo-text"> UPeeks</h1></a>
+            <a href="/index.html"><h1 class="upeeks-logo-text"> UPeeks</h1></a>
         </div>
         <!-- Nav Menu -->
         <nav>
-
+          <ul class="navbar">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/src/gallery.html">Gallery</a></li>
+            <li><a href="/src/about.html">About Us</a></li>
+            <li><a href="/src/contact.html">Contact Us</a></li>
+          </ul>
         </nav>
+        
     </header>
 
     <!-- Footer Section -->
     <footer>
         <div class="upLogo">
-            <img src="img/UPeeks Logo.png" alt="University of the Philippines">
+            <img src="/img/UPeeks Logo.png" alt="University of the Philippines">
         </div>
         <div class="footer-content">
             <h3 class="upeeks-footer">UPeeks</h3>
