--- a/src/gallery.html
+++ b/src/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="gallery.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
@@ -27,6 +28,19 @@
         </nav>
         
     </header>
+
+    <!-- Main Content -->
+    <main>
+        <div class="gallery-nav">
+            <ul class="gallery-navbar">
+                <li><a href="faci.html">Facilities</a></li>
+                <li><a href="diner.html">Diner</a></li>
+                <li><a href="transpo.html">Transportation</a></li>
+                <li><a href="dorm.html">Dormitories</a></li>
+            </ul>
+            <hr>
+        </div>
+    </main>
 
     <!-- Footer Section -->
     <footer>
