Fixed the footer and designed the gallery page

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -40,6 +40,37 @@
             </ul>
             <hr>
         </div>
+
+        <!-- Facilities Preview SlideShow -->
+        <h1>Facilities</h1>
+        <div class="preview">
+            <img src="../img/YJM_8563.JPG">
+            <p>Explore, engage, and be inspired at UP Mindanao facilities, where innovation meets excellence. Join us for an exclusive experience in a vibrant academic environment. An enriching visit awaits you, as we invite you to discover the state-of-the-art amenities that redefine learning without bounds at UP Mindanao!</p>
+        </div>
+
+        <!-- Cafeteria Preview SlideShow -->
+        <h1>Cafeteria</h1>
+        <div class="preview">
+            <img src="../img/YJM_8579.JPG" width="50%">
+            <div class="text-box">
+                
+            </div>
+            <p>TestTestTestTestTestTestTestTestTestTestTestTest</p>
+        </div>
+
+        <!-- Transportation Preview SlideShow -->
+        <h1>Transportation</h1>
+        <div class="preview">
+            <img src="../img/YJM_8652.JPG" width="50%">
+            <p>TestTestTestTestTestTestTestTestTestTestTestTest</p>
+        </div>
+
+        <!-- Dormitories Preview SlideShow -->
+        <h1>Dormitories</h1>
+        <div class="preview">
+            <img src="../img/YJM_8563.JPG" width="50%">
+            <p>TestTestTestTestTestTestTestTestTestTestTestTest</p>
+        </div>
     </main>
 
     <!-- Footer Section -->
