--- a/src/transpo.html
+++ b/src/transpo.html
@@ -31,6 +31,7 @@
 
     <!-- Main Content -->
     <main>
+        <!-- NavBar for the Gallery -->
         <div class="gallery-nav">
             <ul class="gallery-navbar">
                 <li><a href="faci.html">Facilities</a></li>
