--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </nav>
         
     </header>
-
+    <!-- Main Content -->
+    <main>
+    </main>
     <!-- Footer Section -->
     <footer>
         <div class="upLogo">
