--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Home</title>
 </head>
 <body>
@@ -19,21 +20,32 @@
         <!-- Nav Menu -->
         <nav>
           <ul class="navbar">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/src/gallery.html">Gallery</a></li>
-            <li><a href="/src/about.html">About Us</a></li>
-            <li><a href="/src/contact.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="src/gallery.html">Gallery</a></li>
+            <li><a href="src/about.html">About Us</a></li>
+            <li><a href="src/contact.html">Contact Us</a></li>
           </ul>
         </nav>
         
     </header>
     <!-- Main Content -->
     <main>
+        <div class="slider-container">
+            <div class="slider-inner">
+                <div class="slide"> <img src="../img/YJM_8569.JPG" alt="Slide 1"> </div>
+                <div class="slide"> <img src="../img/YJM_8670.JPG" alt="Slide 2"> </div>
+                <div class="slide"> <img src="../img/YJM_8597.JPG" alt="Slide 3"> </div>
+                <div class="slide"> <img src="../img/YJM_8628.JPG" alt="Slide 3"> </div>
+            </div>
+        
+            <button class="slider-btn" id="prev-btn" onclick="prevSlide()">❮</button>
+            <button class="slider-btn" id="next-btn" onclick="nextSlide()">❯</button>
+        </div>
     </main>
     <!-- Footer Section -->
     <footer>
         <div class="upLogo">
-            <img src="/img/UPeeks Logo.png" alt="University of the Philippines">
+            <img src="img/UPeeks Logo.png" alt="University of the Philippines">
         </div>
         <div class="footer-content">
             <h3 class="upeeks-footer">UPeeks</h3>
@@ -52,5 +64,6 @@
             <p>Copyright &copy; 2023</p>
         </div>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
