--- a/src/about.html
+++ b/src/about.html
@@ -18,13 +18,13 @@
         </div>
         <!-- Nav Menu -->
         <nav>
-          <ul class="navbar">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../src/gallery.html">Gallery</a></li>
-            <li><a href="../src/about.html">About Us</a></li>
-            <li><a href="../src/contact.html">Contact Us</a></li>
-          </ul>
-        </nav>
+            <ul class="navbar">
+              <li><a href="../index.html">HOME</a></li>
+              <li><a href="../src/gallery.html">GALLERY</a></li>
+              <li><a href="../src/about.html">ABOUT US</a></li>
+              <li><a href="../src/contact.html">CONTACT US</a></li>
+            </ul>
+          </nav>
         
     </header>
 
