added right sidebar for FIT

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                 <button class="slider-btn" id="prev-btn" onclick="prevSlide()">❮</button>
                 <button class="slider-btn" id="next-btn" onclick="nextSlide()">❯</button>
             </div>
+            <div class="fit">
+                <a href="https://www.facebook.com/carl.suelllo/"><i class= "fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a>
+                <a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a>  
+            </div>
         </div>
         
     </main>
