added about.css and about content

--- a/src/about.html
+++ b/src/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
@@ -27,6 +28,27 @@
           </nav>
         
     </header>
+     <!-- Main Content -->
+        <div class="about-us">
+            <div class="container">
+                <div class="row">
+                    <div class="flex">
+                        <h1>About Us</h1>
+                        <p>Upeeks, showcases the beauty of UP Mindanao thru galleries of images with portraits of UPMin's distinctive places. 
+                            This website highlights images that shows the visual wonder of UP Mindanao, seeking to persuade potential students, 
+                            as well as incoming freshman, to begin their academic adventure at UP Mindanao. Our primary goal is to provide them with
+                            a complete overview, providing a glimpse into the varied landmarks and exciting opportunities that await them inside 
+                            the dynamic community of the university. </p>
+                         <div class="social-links">
+                            <a href="https://www.facebook.com/"><i class= "fa-brands fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a>
+                            <a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a> 
+                         </div>
+                         <a href="">Contact Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <!-- Footer Section -->
     <footer>
