--- a/src/contact.html
+++ b/src/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,93 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Home</title>
 </head>
+
 <body>
     <!-- Header Sections -->
     <header>
         <div class="header-logo">
-            <a href="/index.html"><h1 class="upeeks-logo-text"> UPeeks</h1></a>
+            <a href="/index.html">
+                <h1 class="upeeks-logo-text"> UPeeks</h1>
+            </a>
         </div>
         <!-- Nav Menu -->
         <nav>
             <ul class="navbar">
-              <li><a href="../index.html">HOME</a></li>
-              <li><a href="../src/gallery.html">GALLERY</a></li>
-              <li><a href="../src/about.html">ABOUT US</a></li>
-              <li><a href="../src/contact.html">CONTACT US</a></li>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../src/gallery.html">GALLERY</a></li>
+                <li><a href="../src/about.html">ABOUT US</a></li>
+                <li><a href="../src/contact.html">CONTACT US</a></li>
             </ul>
-          </nav>
-        
-    </header>
+        </nav>
 
+    </header>
+    <main>
+        <section class="conContact">
+            <div class="conContent">
+                <h2>Contact Us</h2>
+                <p>Have a question or feedback? We're here to help!
+                    Our team is dedicated to making your experience seamless.
+                    Contact us effortlessly through the options below.</p>
+            </div>
+            <div class="conContainer">
+                <div class="contactInfo">
+                    <div class="conBox">
+                        <div class="conIcons"><a href="https://www.facebook.com/profile.php?id=61554569280419"><i
+                                    class="fab fa-facebook"></i></a></div>
+                        <div class="conText">
+                            <h3>Connect with Us on Facebook!</h3>
+                            <p>Engage with our community, ask questions, and stay in the loop! We love connecting with
+                                you.</p>
+                        </div>
+                    </div>
+                    <div class="conBox">
+                        <div class="conIcons"><i class="fab fa-twitter"></i></div>
+                        <div class="conText">
+                            <h3>Follow Us on Twitter!</h3>
+                            <p>Stay in the know with real-time updates, and a sneak peek into our world.
+                                Follow us on Twitter for the latest news, and exclusive content. Join the conversation –
+                                your
+                                thoughts matter!</p>
+                        </div>
+                    </div>
+                    <div class="conBox">
+                        <div class="conIcons"><i class="fab fa-instagram"></i></div>
+                        <div class="conText">
+                            <h3>Connect on Instagram!</h3>
+                            <p>Experience the visual side of our page on Instagram. Explore stunning visuals,
+                                behind-the-scenes
+                                stories, and join a community of like-minded individuals.
+                                Don't miss out on the visual feast – follow us now!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contactForm">
+                    <form>
+                        <h2>Send Message</h2>
+                        <div class="inputBox">
+                            <input type="text" name="fullName" required="required">
+                            <span>Full Name</span>
+                        </div>
+                        <div class="inputBox">
+                            <input type="email" name="email" required="required">
+                            <span>Email</span>
+                        </div>
+                        <div class="inputBox">
+                            <textarea name="message" required="required"></textarea>
+                            <span>Type your Message...</span>
+                        </div>
+                        <div class="inputBox">
+                            <input type="submit" value="Send">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     <!-- Footer Section -->
     <footer>
         <div class="upLogo">
@@ -37,13 +104,13 @@
             <h3 class="upeeks-footer">UPeeks</h3>
             <p>
                 The University of the Philippines is known for its quality education
-                and also for its mesmerizing sceneries. It embraces everyone to enjoy 
+                and also for its mesmerizing sceneries. It embraces everyone to enjoy
                 the knowledge and freedom in fulfilling one goal.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/carl.suelllo/"><i class= "fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a> </li>    
+                <li><a href="https://www.facebook.com/carl.suelllo/"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> </li>
+                <li><a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a> </li>
             </ul>
         </div>
         <div class="footer-bottom">
@@ -51,4 +118,5 @@
         </div>
     </footer>
 </body>
+
 </html>
