added our team and temporary images

--- a/src/about.html
+++ b/src/about.html
@@ -1,76 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="stylesheet" type="text/css" href="about.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Home</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="about.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>About</title>
+  </head>
+  <body>
     <!-- Header Sections -->
     <header>
-        <div class="header-logo">
-            <a href="/index.html"><h1 class="upeeks-logo-text"> UPeeks</h1></a>
-        </div>
-        <!-- Nav Menu -->
-        <nav>
-            <ul class="navbar">
-              <li><a href="../index.html">HOME</a></li>
-              <li><a href="../src/gallery.html">GALLERY</a></li>
-              <li><a href="../src/about.html">ABOUT US</a></li>
-              <li><a href="../src/contact.html">CONTACT US</a></li>
-            </ul>
-          </nav>
-        
+      <div class="header-logo">
+        <a href="/index.html"><h1 class="upeeks-logo-text">UPeeks</h1></a>
+      </div>
+      <!-- Nav Menu -->
+      <nav>
+        <ul class="navbar">
+          <li><a href="../index.html">HOME</a></li>
+          <li><a href="../src/gallery.html">GALLERY</a></li>
+          <li><a href="../src/about.html">ABOUT US</a></li>
+          <li><a href="../src/contact.html">CONTACT US</a></li>
+        </ul>
+      </nav>
     </header>
-     <!-- Main Content -->
-        <div class="about-us">
-            <div class="container">
-                <div class="row">
-                    <div class="flex">
-                        <h1>About Us</h1>
-                        <p>Upeeks, showcases the beauty of UP Mindanao thru galleries of images with portraits of UPMin's distinctive places. 
-                            This website highlights images that shows the visual wonder of UP Mindanao, seeking to persuade potential students, 
-                            as well as incoming freshman, to begin their academic adventure at UP Mindanao. Our primary goal is to provide them with
-                            a complete overview, providing a glimpse into the varied landmarks and exciting opportunities that await them inside 
-                            the dynamic community of the university. </p>
-                         <div class="social-links">
-                            <a href="https://www.facebook.com/"><i class= "fa-brands fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a>
-                            <a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a> 
-                         </div>
-                         <a href="">Contact Us</a>
-                    </div>
-                </div>
+    <!-- Main Content -->
+    <body>
+      <!-- About Us -->
+      <div class="about-us">
+        <div class="container">
+          <div class="row">
+            <div class="flex">
+              <h1>About Us</h1>
+              <p>
+                Upeeks, showcases the beauty of UP Mindanao thru galleries of
+                images with portraits of UPMin's distinctive places. This
+                website highlights images that shows the visual wonder of UP
+                Mindanao, seeking to persuade potential students, as well as
+                incoming freshman, to begin their academic adventure at UP
+                Mindanao. Our primary goal is to provide them with a complete
+                overview, providing a glimpse into the varied landmarks and
+                exciting opportunities that await them inside the dynamic
+                community of the university.
+              </p>
+              <div class="social-links">
+                <a href="https://www.facebook.com/"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="https://www.instagram.com/"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="https://www.twitter.com/"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </div>
+              <a href="" class="btn"><b>Contact Us</b></a>
             </div>
+          </div>
         </div>
+      </div>
+      <section>
+        <!-- Our Team-->
+        <div class="main">
+          <h1>Our Team</h1>
+        </div>
+        <div class="row">
+          <!-- Profile 1-->
+          <div class="column">
+            <div class="card">
+              <div class="img-container">
+                <img src="../img/ProfilePic1.jpg" />
+              </div>
+              <h3>Carl Raymund Suello</h3>
+              <p>Lead Developer</p>
+              <div class="icons">
+                <a href="#">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#">
+                  <i class="fas fa-envelope"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Profile 2-->
+          <div class="column">
+            <div class="card">
+              <div class="img-container">
+                <img src="../img/ProfilePic2.png" />
+              </div>
+              <h3>Kyle Howard Senoy</h3>
+              <p>Developer/Designer</p>
+              <div class="icons">
+                <a href="#">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#">
+                  <i class="fas fa-envelope"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Profile 3-->
+          <div class="column">
+            <div class="card">
+              <div class="img-container">
+                <img src="../img/ProfilePic3.jpg" />
+              </div>
+              <h3>Yldevier Magpusao</h3>
+              <p>Developer/Photographer</p>
+              <div class="icons">
+                <a href="#">
+                  <i class="fab fa-facebook"></i>
+                </a>
+                <a href="#">
+                  <i class="fas fa-envelope"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </body>
 
     <!-- Footer Section -->
     <footer>
-        <div class="upLogo">
-            <img src="../img/UPeeks Logo.png" alt="University of the Philippines">
-        </div>
-        <div class="footer-content">
-            <h3 class="upeeks-footer">UPeeks</h3>
-            <p>
-                The University of the Philippines is known for its quality education
-                and also for its mesmerizing sceneries. It embraces everyone to enjoy 
-                the knowledge and freedom in fulfilling one goal.
-            </p>
-            <ul class="socials">
-                <li><a href="https://www.facebook.com/carl.suelllo/"><i class= "fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a> </li>    
-            </ul>
-        </div>
-        <div class="footer-bottom">
-            <p>Copyright &copy; 2023</p>
-        </div>
+      <div class="upLogo">
+        <img src="../img/UPeeks Logo.png" alt="University of the Philippines" />
+      </div>
+      <div class="footer-content">
+        <h3 class="upeeks-footer">UPeeks</h3>
+        <p>
+          The University of the Philippines is known for its quality education
+          and also for its mesmerizing sceneries. It embraces everyone to enjoy
+          the knowledge and freedom in fulfilling one goal.
+        </p>
+        <ul class="socials">
+          <li>
+            <a href="https://www.facebook.com/carl.suelllo/"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.twitter.com/"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>Copyright &copy; 2023</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
