--- a/src/about.html
+++ b/src/about.html
@@ -66,7 +66,7 @@
                   ><i class="fa-brands fa-twitter"></i
                 ></a>
               </div>
-              <a href="" class="btn"><b>Contact Us</b></a>
+              <a href="contact.html" class="btn"><b>Contact Us</b></a>
             </div>
           </div>
         </div>
@@ -81,10 +81,10 @@
           <div class="column">
             <div class="card">
               <div class="img-container">
-                <img src="../img/ProfilePic1.jpg" />
+                <img src="../img/ProfilePic3.jpg" />
               </div>
-              <h3>Carl Raymund Suello</h3>
-              <p>Lead Developer</p>
+              <h3>Yldevier Magpusao</h3>
+              <p>Lead Developer/Photographer</p>
               <div class="icons">
                 <a href="#">
                   <i class="fab fa-facebook"></i>
@@ -95,14 +95,14 @@
               </div>
             </div>
           </div>
-          <!-- Profile 2-->
+          <!-- Profile 2 -->
           <div class="column">
             <div class="card">
               <div class="img-container">
-                <img src="../img/ProfilePic2.png" />
+                <img src="../img/ProfilePic1.jpg" />
               </div>
-              <h3>Kyle Howard Senoy</h3>
-              <p>Developer/Designer</p>
+              <h3>Carl Raymund Suello</h3>
+              <p>Developer</p>
               <div class="icons">
                 <a href="#">
                   <i class="fab fa-facebook"></i>
@@ -117,10 +117,10 @@
           <div class="column">
             <div class="card">
               <div class="img-container">
-                <img src="../img/ProfilePic3.jpg" />
+                <img src="../img/ProfilePic2.png" />
               </div>
-              <h3>Yldevier Magpusao</h3>
-              <p>Developer/Photographer</p>
+              <h3>Kyle Howard Senoy</h3>
+              <p>Developer/Designer</p>
               <div class="icons">
                 <a href="#">
                   <i class="fab fa-facebook"></i>
