--- a/src/about.html
+++ b/src/about.html
@@ -56,7 +56,7 @@
                 community of the university.
               </p>
               <div class="social-links">
-                <a href="https://www.facebook.com/"
+                <a href="https://www.facebook.com/profile.php?id=61554569280419"
                   ><i class="fa-brands fa-facebook"></i
                 ></a>
                 <a href="https://www.instagram.com/"
@@ -86,10 +86,10 @@
               <h3>Yldevier Magpusao</h3>
               <p>Lead Developer/Photographer</p>
               <div class="icons">
-                <a href="#">
+                <a href="https://www.facebook.com/0xshr00msz">
                   <i class="fab fa-facebook"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/yldeviermagpusao/">
                   <i class="fas fa-envelope"></i>
                 </a>
               </div>
