--- a/src/contact.html
+++ b/src/contact.html
@@ -25,6 +25,7 @@
     })();
     </script>
     <script src="email.js"></script>
+    <link rel="icon" href="img/upeeksIcon.png" type="image/x-icon">
     <title>Home</title>
 </head>
 
