--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <button class="slider-btn" id="next-btn" onclick="nextSlide()">❯</button>
             </div>
             <div class="fit">
-                <a href="https://www.facebook.com/carl.suelllo/"><i class= "fa-brands fa-facebook"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a>
                 <a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a>  
             </div>
