--- a/src/about.html
+++ b/src/about.html
@@ -72,6 +72,9 @@
           </div>
         </div>
       </div>
+
+      <div class="gap"></div>
+
       <section>
         <!-- Our Team-->
         <div class="main">
@@ -91,7 +94,7 @@
                   <i class="fab fa-facebook"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/yldeviermagpusao/">
-                  <i class="fas fa-envelope"></i>
+                  <i class="fa-brands fa-linkedin"></i>
                 </a>
               </div>
             </div>
