--- a/src/about.html
+++ b/src/about.html
@@ -87,7 +87,7 @@
               <div class="img-container">
                 <img src="../img/ProfilePic3.jpg" />
               </div>
-              <h3>Yldevier Magpusao</h3>
+              <h3>Yldevier John Magpusao</h3>
               <p>Lead Developer/Photographer</p>
               <div class="icons">
                 <a href="https://www.facebook.com/0xshr00msz">
