added tab icons

--- a/src/contact.html
+++ b/src/contact.html
@@ -25,7 +25,7 @@
     })();
     </script>
     <script src="email.js"></script>
-    <link rel="icon" href="img/upeeksIcon.png" type="image/x-icon">
+    <link rel="icon" href="../img/upeeksIcon.png" type="image/x-icon">
     <title>Home</title>
 </head>
 
@@ -60,7 +60,8 @@
                 <div class="contactInfo">
                     <div class="conBox">
                         <div class="conIcons"><a href="https://www.facebook.com/profile.php?id=61554569280419"><i
-                                    class="fab fa-facebook"></i></a></div>
+                                    class="fab fa-facebook"></i></a>
+                        </div>
                         <div class="conText">
                             <h3>Connect with Us on Facebook!</h3>
                             <p>Engage with our community, ask questions, and stay in the loop! We love connecting with
