--- a/src/about.html
+++ b/src/about.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="icon" href="img/upeeksIcon.png" type="image/x-icon">
+    <link rel="icon" href="../img/upeeksIcon.png" type="image/x-icon">
     <title>About</title>
   </head>
   <body>
