add social links

--- a/src/contact.html
+++ b/src/contact.html
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="conBox">
-                        <div class="conIcons"><i class="fab fa-twitter"></i></div>
+                        <div class="conIcons"><a href="https://twitter.com/U_Peeks"><i class="fab fa-twitter"></i></a></div>
                         <div class="conText">
                             <h3>Follow Us on Twitter!</h3>
                             <p>Stay in the know with real-time updates, and a sneak peek into our world.
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="conBox">
-                        <div class="conIcons"><i class="fab fa-instagram"></i></div>
+                        <div class="conIcons"><a href="https://www.instagram.com/_upeeks/"><i class="fab fa-instagram"></i></a></div>
                         <div class="conText">
                             <h3>Connect on Instagram!</h3>
                             <p>Experience the visual side of our page on Instagram. Explore stunning visuals,
@@ -121,9 +121,9 @@
                 the knowledge and freedom in fulfilling one goal.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/carl.suelllo/"><i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a> </li>
+                <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
+                <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>   
             </ul>
         </div>
         <div class="footer-bottom">
