--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
             <div class="fit">
                 <a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a>
-                <a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a>  
+                <a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a>  
             </div>
         </div>
         
@@ -69,9 +69,9 @@
                 Department of Mathematics, Physics and Computer Science
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/carl.suelllo/"><i class= "fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a> </li>    
+                <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
+                <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>     
             </ul>
         </div>
         <div class="footer-bottom">
