--- a/src/gallery.html
+++ b/src/gallery.html
@@ -87,9 +87,9 @@
                 the knowledge and freedom in fulfilling one goal.
             </p>
             <ul class="socials">
-                <li><a href="https://www.facebook.com/carl.suelllo/"><i class= "fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/"><i class= "fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://www.twitter.com/"><i class= "fa-brands fa-twitter"></i></a> </li>    
+                <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
+                <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>    
             </ul>
         </div>
         <div class="footer-bottom">
