Corrected some sentences

--- a/src/about.html
+++ b/src/about.html
@@ -44,11 +44,10 @@
           <div class="flex">
             <h1>About Us</h1>
             <p>
-              Upeeks, showcases the beauty of UP Mindanao thru galleries of
-              images with portraits of UPMin's distinctive places. This
+              Upeeks exhibits the naturistic beauty of UP Mindanao through photography galleries and UP Mindanao's distinctive locations. This
               website highlights images that shows the visual wonder of UP
               Mindanao, seeking to persuade potential students, as well as
-              incoming freshman, to begin their academic adventure at UP
+              incoming freshman to begin their academic adventure at UP
               Mindanao. Our primary goal is to provide them with a complete
               overview, providing a glimpse into the varied landmarks and
               exciting opportunities that await them inside the dynamic
@@ -134,26 +133,25 @@
   <!-- Footer Section -->
   <footer>
     <div class="upLogo">
-      <img src="../img/UPeeks Logo.png" alt="University of the Philippines" />
+        <img src="../img/UPeeks Logo.png" alt="University of the Philippines">
     </div>
     <div class="footer-content">
-      <h3 class="upeeks-footer">UPeeks</h3>
-      <p>
-        The University of the Philippines is known for its quality education
-        and also for its mesmerizing sceneries. It embraces everyone to enjoy
-        the knowledge and freedom in fulfilling one goal.
-      </p>
-      <ul class="socials">
-        <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class="fa-brands fa-facebook"></i></a>
-        </li>
-        <li><a href="https://www.instagram.com/_upeeks/"><i class="fa-brands fa-instagram"></i></a> </li>
-        <li><a href="https://twitter.com/U_Peeks"><i class="fa-brands fa-twitter"></i></a> </li>
-      </ul>
+        <h3 class="upeeks-footer">UPeeks</h3>
+        <p>
+            All Rights Reserved 2020
+            University of the Philippines Mindanao <br>
+            Department of Mathematics, Physics and Computer Science
+        </p>
+        <ul class="socials">
+            <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
+            <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>     
+        </ul>
     </div>
     <div class="footer-bottom">
-      <p>Copyright &copy; 2023</p>
+        <p>Copyright &copy; 2023 UPeeks</p>
     </div>
-  </footer>
+</footer>
 </body>
 
 </html>
