--- a/src/contact.html
+++ b/src/contact.html
@@ -48,7 +48,7 @@
         <section class="conContact">
             <div class="conContent">
                 <h2>Contact Us</h2>
-                <p>Have a question or feedback? We're here to help!
+                <p>Have a suggestion, question, or feedback? We're here to help!
                     Our team is dedicated to making your experience seamless.
                     Contact us effortlessly through the options below.</p>
             </div>
@@ -116,18 +116,18 @@
         <div class="footer-content">
             <h3 class="upeeks-footer">UPeeks</h3>
             <p>
-                The University of the Philippines is known for its quality education
-                and also for its mesmerizing sceneries. It embraces everyone to enjoy
-                the knowledge and freedom in fulfilling one goal.
+                All Rights Reserved 2020
+                University of the Philippines Mindanao <br>
+                Department of Mathematics, Physics and Computer Science
             </p>
             <ul class="socials">
                 <li><a href="https://www.facebook.com/profile.php?id=61554569280419"><i class= "fa-brands fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/_upeeks/"><i class= "fa-brands fa-instagram"></i></a> </li>
-                <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>   
+                <li><a href="https://twitter.com/U_Peeks"><i class= "fa-brands fa-twitter"></i></a> </li>     
             </ul>
         </div>
         <div class="footer-bottom">
-            <p>Copyright &copy; 2023</p>
+            <p>Copyright &copy; 2023 UPeeks</p>
         </div>
     </footer>
 </body>
