unfinished gallery page

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -34,43 +34,50 @@
     <main>
         <div class="gallery-nav">
             <ul class="gallery-navbar">
-                <li><a href="faci.html">Facilities</a></li>
+                <li><a href="faci.html">Establishment</a></li>
                 <li><a href="diner.html">Diner</a></li>
                 <li><a href="transpo.html">Transportation</a></li>
-                <li><a href="dorm.html">Dormitories</a></li>
             </ul>
             <hr>
         </div>
 
-        <!-- Facilities Preview SlideShow -->
-        <h1>Facilities</h1>
-        <div class="preview">
-            <img src="../img/YJM_8563.JPG">
-            <p>Explore, engage, and be inspired at UP Mindanao facilities, where innovation meets excellence. Join us for an exclusive experience in a vibrant academic environment. An enriching visit awaits you, as we invite you to discover the state-of-the-art amenities that redefine learning without bounds at UP Mindanao!</p>
-        </div>
-
-        <!-- Cafeteria Preview SlideShow -->
-        <h1>Cafeteria</h1>
-        <div class="preview">
-            <img src="../img/YJM_8579.JPG" width="50%">
-            <div class="text-box">
-                
+        <div class="section-container">
+            <div class="facility-container">
+                <img src="../img/YJM_8597.JPG">
+                <div class="text-container1">
+                    <h1>Establishments in UP Mindanao</h1>
+                    <p>
+                        
+                    </p>
+                    <a href="faci.html"><button class="gallery-button">View Images</button></a>
+                </div>
             </div>
-            <p>TestTestTestTestTestTestTestTestTestTestTestTest</p>
-        </div>
 
-        <!-- Transportation Preview SlideShow -->
-        <h1>Transportation</h1>
-        <div class="preview">
-            <img src="../img/YJM_8652.JPG" width="50%">
-            <p>TestTestTestTestTestTestTestTestTestTestTestTest</p>
-        </div>
+            <div class="spacer"></div>
 
-        <!-- Dormitories Preview SlideShow -->
-        <h1>Dormitories</h1>
-        <div class="preview">
-            <img src="../img/YJM_8563.JPG" width="50%">
-            <p>TestTestTestTestTestTestTestTestTestTestTestTest</p>
+            <div class="diner-container">
+                <img src="../img/YJM_8579.JPG">
+                <div class="text-container2">
+                    <h1>Dining Area</h1>
+                    <p>
+                        Kalimudan Lane serves as a bustling hub within UP Mindanao, offering a variety of food options to cater to the diverse tastes of students, faculty, and visitors. Understanding the financial constraints of students, Kalimudan Lane is likely to offer budget-friendly meal options, ensuring that students have access to affordable and nutritious food
+                    </p>
+                    <a href="diner.html"><button class="gallery-button">View Images</button></a>
+                </div>
+            </div>
+
+            <div class="spacer"></div>
+
+            <div class="transpo-container">
+                <img src="../img/YJM_8652.JPG">
+                <div class="text-container1">
+                    <h1>Transportation</h1>
+                    <p>
+                        The tricycle terminal at UP Mindanao is designed to be simple, accommodating, and budget-friendly for students and visitors. The terminal likely features a designated area where tricycles queue to pick up and drop off passengers. The terminal is strategically located within or near the university campus, ensuring easy access for students and visitors.
+                    </p>
+                    <a href="transpo.html"><button class="gallery-button">View Images</button></a>
+                </div>
+            </div>
         </div>
     </main>
 
