--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="home">
             <div class="slider-container">
                 <div class="slider-inner">
-                    <div class="slide"> <img src="../img/YJM_8569.JPG" alt="Slide 1"> </div>
-                    <div class="slide"> <img src="../img/YJM_8670.JPG" alt="Slide 2"> </div>
-                    <div class="slide"> <img src="../img/YJM_8597.JPG" alt="Slide 3"> </div>
-                    <div class="slide"> <img src="../img/YJM_8628.JPG" alt="Slide 4"> </div>
+                    <div class="slide"> <img src="img/YJM_8569.JPG" alt="Slide 1"> </div>
+                    <div class="slide"> <img src="img/YJM_8670.JPG" alt="Slide 2"> </div>
+                    <div class="slide"> <img src="img/YJM_8597.JPG" alt="Slide 3"> </div>
+                    <div class="slide"> <img src="img/YJM_8628.JPG" alt="Slide 4"> </div>
                 </div>
             
                 <button class="slider-btn" id="prev-btn" onclick="prevSlide()">❮</button>
