added content.css and renamed image files

--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" href="../img/upeeksIcon.png" type="image/x-icon">
-  <title>About</title>
+  <title>About Us</title>
 </head>
 
 <body>
@@ -113,7 +113,7 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="../img/ProfilePic2.png" />
+              <img src="../img/ProfilePic2.jpg" />
             </div>
             <h3>Kyle Howard Senoy</h3>
             <p>Developer/Designer</p>
