--- a/src/contact.html
+++ b/src/contact.html
@@ -23,7 +23,7 @@
     </script>
     <script src="email.js"></script>
     <link rel="icon" href="../img/upeeksIcon.png" type="image/x-icon">
-    <title>Home</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
