--- a/src/faci.html
+++ b/src/faci.html
@@ -18,7 +18,7 @@
     <!-- Header Sections -->
     <header>
         <div class="header-logo">
-            <a href="/index.html"><h1 class="upeeks-logo-text"> UPeeks</h1></a>
+            <a href="../index.html"><h1 class="upeeks-logo-text"> UPeeks</h1></a>
         </div>
         <!-- Nav Menu -->
         <nav>
