--- a/src/transpo.html
+++ b/src/transpo.html
@@ -15,7 +15,7 @@
     <!-- Header Sections -->
     <header>
         <div class="header-logo">
-            <a href="/index.html"><h1> UPeeks</h1></a>
+            <a href="../index.html"><h1> UPeeks</h1></a>
         </div>
         <!-- Nav Menu -->
         <nav>
